[gd_scene load_steps=3 format=3 uid="uid://cuhh18oh2cxf0"]

[ext_resource type="Script" path="res://Scenes/PauseMenu/PauseMenu.gd" id="1_4jdwv"]
[ext_resource type="PackedScene" uid="uid://doj1dmgtf0a71" path="res://Scenes/UI/SoundButton/SoundButton.tscn" id="3_yvul8"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
layer = 10
script = ExtResource("1_4jdwv")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 256.0
offset_right = -256.0
color = Color(0, 0, 0, 1)

[node name="Title" type="Label" parent="Control"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -93.5
offset_top = 50.0
offset_right = 93.5
offset_bottom = 131.0
text = "Pause"
horizontal_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.5
offset_top = -116.0
offset_right = 116.5
offset_bottom = 116.0
theme_override_constants/separation = 24

[node name="ResumeBtn" parent="Control/ButtonsContainer" instance=ExtResource("3_yvul8")]
layout_mode = 2
text = "Resume"

[node name="RestartBtn" parent="Control/ButtonsContainer" instance=ExtResource("3_yvul8")]
layout_mode = 2
text = "Restart"

[node name="MainMenuBtn" parent="Control/ButtonsContainer" instance=ExtResource("3_yvul8")]
layout_mode = 2
text = "Main Menu"

[node name="ExitBtn" parent="Control/ButtonsContainer" instance=ExtResource("3_yvul8")]
layout_mode = 2
text = "Exit Game"

[node name="ConfirmRestart" type="ConfirmationDialog" parent="Control"]
dialog_text = "Restart the game?"

[node name="ConfirmMainMenu" type="ConfirmationDialog" parent="Control"]
dialog_text = "Go back to main menu?"

[node name="ConfirmExit" type="ConfirmationDialog" parent="Control"]
dialog_text = "Quit the game?"

[connection signal="pressed" from="Control/ButtonsContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="Control/ButtonsContainer/RestartBtn" to="." method="_on_RestartBtn_pressed"]
[connection signal="pressed" from="Control/ButtonsContainer/MainMenuBtn" to="." method="_on_MainMenuBtn_pressed"]
[connection signal="pressed" from="Control/ButtonsContainer/ExitBtn" to="." method="_on_ExitBtn_pressed"]
[connection signal="confirmed" from="Control/ConfirmRestart" to="." method="_on_ConfirmRestart_confirmed"]
[connection signal="confirmed" from="Control/ConfirmMainMenu" to="." method="_on_ConfirmMainMenu_confirmed"]
[connection signal="confirmed" from="Control/ConfirmExit" to="." method="_on_ConfirmExit_confirmed"]
